# DinosaurGameAI-Dec2020

./: .replit  DinoGameRun.pde  NeuralNetworkImage.pde  Population.pde  pyproject.toml
DinoGame/Processing(Ai)/: NeuralNetworkImage.pde
DinoGame/Python(Ai)/: DinoGame.py  DinoGameNN.py  NEAT.py  NeatTest.py
DinoGame/Python(Human)/: DinoGame.py
DinoGame/Python_Ai/: DinoGame.py  DinoGameNN.py  LearnAndMutate.pde  NEAT.py
DinosaurGameNeuralNetwork_Dec2020/: DinosaurGameNeuralNetwork_Dec2020.pde  Display.pde  LearnAndMutate.pde
DinosaurGameNeuralNetwork_Dec2020/Processing/: DinoGameRun.pde  Display.pde
DinosaurGameNeuralNetwork_Dec2020/Processing(Ai)/: LearnAndMutate.pde
DinosaurGameNeuralNetwork_Dec2020/Python/: DinoGameNN.py  DinosaurGameNeuralNetwork_Dec2020.pde  LearnAndMutate.pde  NEAT.py  Population.pde
DinosaurGameNeuralNetwork_Dec2020/Python(Ai)/: DinoGameNN.py  NEAT.py
DinosaurGameNeuralNetwork_Dec2020/Python(Human)/: DinoGame.py
Processing_Ai/DinosaurGameNeuralNetwork_Dec2020/: DinosaurGameNeuralNetwork_Dec2020.pde
Python_Ai/: DinoGame-withdisplay.py  DinoGame.py  NEAT.py  Test.py  dinogame-withoutdisplay.py
Python_Human/: DinoGame.py
