[tool.poetry]
name = "repl_python3_dinogameai"
version = "0.1.0"
description = ""
authors = ["SeanMabli <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.1.0"
aiinpy = "^0.0.16"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
